Refactoring and code smell cleanup.